--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,14 @@
-<my-app>loading</my-app>
+<!DOCTYPE html>
+<html>
+<head>
+    <base href="/" />
+    <title>Angular - Master Details CRUD Example</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- bootstrap css -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" />
+</head>
+<body>
+    <my-app>Loading...</my-app>
+</body>
+</html>
